minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: minio
  ports:
  - name: "ui-address"
    port: 9000
    targetPort: 9000
    protocol: TCP
  - name: "console-address"
    port: 9001
    targetPort: 9001
    protocol: TCP
