ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-gen3-poc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: revproxy-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: revproxy-service
            port:
              number: 443

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-gen3-poc
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: revproxy-service
              port:
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: revproxy-service
              port:
                number: 443
