local-gen3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-gen3
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: local-gen3-nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: revproxy-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: revproxy-service
            port:
              number: 443
